@@ -350,3 +350,59 @@ int GetServiceMap(struct service * svcs, char * config) {
 	free(mysql_db);
 	return -1;	
 }
+
+void clone_me() {
+	printf("Go and create a	database:\n");
+	
+	printf("	CREATE TABLE `workers` ( \n");
+	printf("`worker_id` int(12) NOT NULL auto_increment,\n");
+  	printf("`worker_name` varchar(255) NOT NULL default '',\n");
+  	printf("`worker_mail` varchar(255) NOT NULL default '',\n");
+  	printf("`worker_icq` int(20) NOT NULL default '0',\n");
+  	printf("`worker_active` int(2) NOT NULL default '0',\n");
+  	printf("`password` varchar(255) NOT NULL default '',\n");
+  	printf("`status` varchar(255) NOT NULL default '',\n");
+  	printf("`enabled_services` varchar(255) NOT NULL default '',\n");
+  	printf("`notify_levels` varchar(50) NOT NULL default '',\n");
+  	printf("PRIMARY KEY  (`worker_id`)\n");
+	printf(");");
+
+	printf("CREATE TABLE `services` (\n");
+  	printf("`service_id` int(12) NOT NULL auto_increment,\n");
+  	printf("`server_id` int(12) NOT NULL default '0',\n");
+  	printf("`service_plugin` varchar(255) NOT NULL default '',\n");
+  	printf("`service_name` varchar(255) NOT NULL default '',\n");
+  	printf("`service_state` int(12) NOT NULL default '0',\n");
+  	printf("`service_text` varchar(255) NOT NULL default '',\n");
+  	printf("`service_args` varchar(255) NOT NULL default '',\n");
+  	printf("`service_last_check` datetime NOT NULL default '0000-00-00 00:00:00',\n");
+  	printf("`service_notify` int(2) NOT NULL default '0',\n");
+  	printf("`service_active` int(2) NOT NULL default '1',\n");
+  	printf("`service_current` int(2) NOT NULL default '0',\n");
+  	printf("`service_flapping` datetime NOT NULL default '0000-00-00 00:00:00',\n");
+  	printf("`service_time_from` time NOT NULL default '00:00:00',\n");
+  	printf("`service_time_to` time NOT NULL default '00:00:00',\n");
+  	printf("`service_interval` int(255) NOT NULL default '1',\n");
+  	printf("`service_type` int(11) NOT NULL default '1',\n");
+  	printf("`service_var` varchar(255) default NULL,\n");
+  	printf("`service_passive_timeout` int(11) NOT NULL default '100',\n");
+  	printf("PRIMARY KEY  (`service_id`),\n");
+  	printf("KEY `service_id` (`service_id`),\n");
+  	printf("KEY `service_id_2` (`service_id`,`server_id`)\n");
+	printf(") ;\n");
+	
+  	printf("CREATE TABLE `servers` (\n");
+  	printf("`server_id` int(12) NOT NULL auto_increment,\n");
+  	printf("`server_ip` varchar(255) NOT NULL default '',\n");
+  	printf("`server_name` varchar(255) NOT NULL default '',\n");
+  	printf("`server_ico` varchar(255) NOT NULL default '',\n");
+  	printf("`server_enabled` int(2) NOT NULL default '1',\n");
+  	printf("`server_port` int(255) NOT NULL default '9030',\n");
+	printf("PRIMARY KEY  (`server_id`),\n");
+  	printf("UNIQUE KEY `server_id` (`server_id`))\n");
+
+
+	
+	
+	
+}
