@@ -151,7 +151,7 @@ void bartlby_trigger(struct service * svc, char * cfgfile, void * shm_addr) {
 					if((bartlby_trigger_escalation(&wrkmap[x])) == FL) continue;
 					if((bartlby_trigger_worker_level(&wrkmap[x], svc->current_state)) == FL) continue;
 					//_log("EXEC trigger: %s", full_path);
-					_log("@NOT@%d|%d|%d|%s", svc->service_id, svc->last_state ,svc->current_state,wrkmap[x].mail);
+					_log("@NOT@%d|%d|%d|%s|%s", svc->service_id, svc->last_state ,svc->current_state,entry->d_name,wrkmap[x].mail);
 					
 					svc->last_notify_send=time(NULL);
 					wrkmap[x].escalation_time=time(NULL);
